Clear the text cache when the tooltip text is updated.

BUG=689863
TEST=BookmarkBarViewTest.UpdateTooltipText

Review-Url: https://codereview.chromium.org/2687893002
Cr-Commit-Position: refs/heads/master@{#451591}

Former-commit-id: 3dc0899d326b4d59ef71b6a49a7a786ab28a3125